--- a/Pix/Info.plist
+++ b/Pix/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>In order to upload a photo, this app requires access to your Photos.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
